--- a/data_spaceedit.htm
+++ b/data_spaceedit.htm
@@ -234,11 +234,12 @@
                                                         <div class="form_content">
                                                             <div class="check_grp form_inline">
                                                                 <label><input name="111" type="checkbox" value="" checked><span>投影機(HD)</span></label>
-                                                                <label><input name="111" type="checkbox" value="" checked><span>PA音響設備/span></label>
+                                                                <label><input name="111" type="checkbox" value="" checked><span>PA音響設備</span></label>
                                                                 <label><input name="111" type="checkbox" value="" checked><span>聚光燈</span></label>
                                                                 <label><input name="111" type="checkbox" value="" checked><span>網際網路數據專線</span></label>
                                                                 <label><input name="111" type="checkbox" value=""><span>桌子</span></label>
                                                                 <label><input name="111" type="checkbox" value=""><span>座椅</span></label>
+                                                                <label><input name="111" type="checkbox" value=""><span>其他： </span><input name="" type="text" value="" style="width:300px;"></label>
                                                             </div>
                                                         </div>
                                                     </div>
