--- a/reservationEdit_update.htm
+++ b/reservationEdit_update.htm
@@ -188,13 +188,13 @@
                                                             <label>場地費用</label>
                                                         </div>
                                                     </div>
-                                                    <div class="form_grp" style="margin-top:20px;">
+                                                    <!--div class="form_grp" style="margin-top:20px;">
                                                         <div class="labelEffect">
                                                             <textarea class="used">本中心提供每間會議室桌椅數量以價目表所列標準容量為限，額外需求或現場追加桌椅費用另計。
 免費提供標準配備：有線麥克風及無線麥克風各 1 支、主講桌 1 個、司儀台 1 個、三人報到桌 2 張、海報架 3 個，其它設備依價目表收費。</textarea>
                                                             <label>租借內容(僅列主要會議室，租借內容詳見合約)</label>
                                                         </div>
-                                                    </div>
+                                                    </div-->
                                                 <h4>場地資訊</h4>
                                                     <div class="form_grp form_inline" style="margin-top:20px;">
                                                         <div class="form_content form_inline">
@@ -681,7 +681,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <!--hr>
+                                                <hr>
                                                 <h4>附件上傳(完成問卷調查後顯示)</h4>
                                                 <div class="flex-form">
                                                     <div class="setting_block" style="width:100%;">
@@ -706,7 +706,7 @@
                                                         </div>
 
                                                     </div>
-                                                </div-->
+                                                </div>
 
                                             </div>
                                         </div>
