--- a/index_list.html
+++ b/index_list.html
@@ -105,11 +105,12 @@
                         <td>登入頁</td>
                         <td>
                             <ul>
-                                <li><a href="login.htm" target="_blank"></a></li>
+                                <li>標準版：<a href="login.htm" target="_blank"></a></li>
                                 <li>TICC：<a href="login_ticc.htm" target="_blank"></a><br></li>
+                                <li>ILOSH：<a href="login_ilosh.htm" target="_blank"></a><br></li>
                             </ul>
                             
-                            <font style="color:red;">4/28: 新增 for VOD 使用的 logo <img src="images/TJ_logo.png" style="width:30px;vertical-align:middle;">（替換登入頁和aside logo圖）；修正假文字</font>
+                            <font style="color:red;">替換登入頁和Aside logo圖</font>
                         </td>
                     </tr>
                     <tr>
@@ -308,7 +309,7 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>AP功能：空間管理</td>
+                        <td>AP功能：VDI - 1.場地空間管理:地點/電腦/分析區開放時間</td>
                         <td>
                             <ul>
                                 <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
@@ -318,11 +319,57 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：預約管理</td>
+                        <td>AP功能：VDI - 2.預約名單 / 會員帳號 / 虛擬主機 / 申請案件管理</td>
                         <td>
                             <ul>
                                 <li>2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
                                 <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：VDI - 3.報表模組</td>
+                        <td>
+                            <ul>
+                                <li></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：採購網 - 4.標案管理(編輯案件、附件變更歷程紀錄)</td>
+                        <td>
+                            <ul>
+                                <li>4-1.標案清單 <a href="ilosh_projectList.htm" target="_blank"></a></li>
+                                <li>4-2.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：採購網 - 報表模組</td>
+                        <td>
+                            <ul>
+                                <li></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：研究網 - 成果批次上稿(附件批次上傳)</td>
+                        <td>
+                            <ul>
+                                <li></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：研究網 - 報表模組</td>
+                        <td>
+                            <ul>
+                                <li></li>
                             </ul>
                         </td>
                     </tr>
