--- a/ilosh_projectEdit.htm
+++ b/ilosh_projectEdit.htm
@@ -659,7 +659,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside_ticc.htm");
+    $('aside').load("aside_ilosh.htm");
     </script>
     <!--Select multiple checkbox-->
     <script>
