--- a/index_list.html
+++ b/index_list.html
@@ -343,6 +343,7 @@
                             <ul>
                                 <li>4-1.標案清單 <a href="ilosh_projectList.htm" target="_blank"></a></li>
                                 <li>4-2.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a></li>
+                                <li>彈出視窗(Lightbox)：歷程欄位記錄 <a href="fancybox_projecthistory.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
