--- a/ilosh_projectEdit.htm
+++ b/ilosh_projectEdit.htm
@@ -283,12 +283,24 @@
                                                             <label>採購性質</label>
                                                         </div>
                                                     </div>
-                                                    <div class="form_grp">
+                                                    <div class="form_grp" style="margin-bottom:50px;">
                                                         <div class="labelEffect">
-                                                            <textarea class="used">本中心提供每間會議室桌椅數量以價目表所列標準容量為限，額外需求或現場追加桌椅費用另計。
-免費提供標準配備：有線麥克風及無線麥克風各 1 支、主講桌 1 個、司儀台 1 個、三人報到桌 2 張、海報架 3 個，其它設備依價目表收費。</textarea>
+                                                            <textarea class="used">(一) 評審方式首先由本所成立評審小組辦理評審。評審委員就個別廠商評審項目分別評分後予以加總，依加總分數高低轉換為序位，以平均總評分在合格分數以上之序位合計值最低廠商為序位第一，依次列入優勝廠商排名。個別廠商之平均總分，未達合格分數70分者，不列為議價對象。評審決定優勝序位後依序辦理議價。二家以上優勝廠商序位合計值相同者，以標價低者優先議價；廠商報價仍相同，以獲得評審委員評定序位第一較多者優先議價；仍相同者，抽籤決定之。
+(二) 評審項目及評審標準：
+1. 計畫(企劃)目標及計畫(企劃)內容是否明確，能否符合本採購需要(15%)。
+2. 執行方法、執行步驟及執行進度是否適當及創新性(25%)。
+3. 廠商相關實績及執行能力(含本專案工作人員之學識及經驗)(15%)。
+4. 價格之完整性及合理性 (須提供各項目之經費支出明細)(20%)。
+5. 簡報及答詢(5%)(※未出席者本項零分計)。
+6. 是否完備提出預期成效及成果(15%))
+7. 廠商企業社會責任(CSR)指標(5%)
+   (1)近一年內曾替員工普遍性加薪（2%）。
+   (2)於投標文件載明後續履約期間給予全職從事本勞務採購案之員工薪資(不含加班費)至少新台幣(下同)3萬元以上（2%）。
+   (3)提供員工「工作與生活平衡」措施（1%）。
+(三) 評審作業進行方式由本所排定日期召開評審小組辦理評審，並通知符合招標文件規定資格之廠商提出簡報，時間15分鐘，由主持人或共(協)同主持人(廠商代表)說明其企劃書之內容。</textarea>
                                                             <label>評選方式</label>
                                                         </div>
+                                                        <div class="help">1500 / 8000</div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
@@ -296,18 +308,82 @@
                                                             <label>依據法條</label>
                                                         </div>
                                                     </div>
-                                                    <div class="form_grp">
+                                                    <div class="form_grp" style="margin-bottom:50px;">
                                                         <div class="labelEffect">
-                                                            <textarea class="used">本中心提供每間會議室桌椅數量以價目表所列標準容量為限，額外需求或現場追加桌椅費用另計。
-免費提供標準配備：有線麥克風及無線麥克風各 1 支、主講桌 1 個、司儀台 1 個、三人報到桌 2 張、海報架 3 個，其它設備依價目表收費。</textarea>
+                                                            <textarea class="used">國內建築樓層有挑高的趨勢，而國內一般仍較習慣使用可調鋼管支柱做為模板支撐，因為在固定時較困難且比較費時，工地通常採用因陋就簡的方式固定，因此在整體強度及穩定度上都有很大的影響。此外，在挑高較大的工程，通常會使用複合式的支撐系統，由於目前國內並沒有適當的規範可依循，業者多依經驗施作，整體安全性有疑慮，施工過程中發生災害的比例也較高。
+本案主的目的在探討可調鋼管支撐固定方式對整體強度的影響，並評估複合式支撐系統在不同的聯結方式下，其強度與穩定性的差異，編撰模板支撐設計指引，以提供設計與施工單位做為支撐式選擇與設計的參考依據，以落實按圖施工的查核機制，藉由源頭管理機制的強化，有效掌握並控制施工風險，以達到落實災害預防之目的。</textarea>
                                                             <label>研究需求&預期效益</label>
                                                         </div>
+                                                        <div class="help">550 / 8000</div>
+                                                    </div>
+                                                    <div class="form_grp" style="margin-bottom:50px;">
+                                                        <div class="labelEffect">
+                                                            <textarea class="used">一、模板支撐職災案例蒐集與要因分析；
+(一)現場訪視10場次以上；
+(二)專家座談1場次；
+二、模板支撐施工相關法規與技術規範蒐集；
+三、建立複合式模板支撐試驗法：
+(一)下方為1層支撐排架，上方為可調鋼管；
+(二)下方為1層系統式支撐架，上方為可調鋼管：
+(三)下方為2層支撐排架，上方為可調鋼管；
+(四)下方為2層系統式支撐架，上方為可調鋼管：
+(五)比對試驗；
+(六)試驗治具之費用已含於標案中；
+四、進行複合式模板支撐之強度測試：
+(一)治具的設計；完成採購案後治具需繳回本所；
+(二)試驗可於本所進行，但不得編列試驗費用，計畫結束時需將試驗廢料清除，清運費與殘值均內含標案中不另計價；
+五、建立上下方不同固定方式之可調鋼管試驗法；
+(一)高度4.5公尺；
+(二)下方釘孔固定及不固定；
+(三)上方釘孔與貫材固定及貫材單釘套入續接管；
+六、進行上下方不同固定方式之可調鋼管試驗:
+(一)治具的設計；完成採購案後治具需繳回本所；
+(二)試驗可於本所進行，但不得編列試驗費用，計畫結束時需將試驗廢料清除，清運費與殘值均內含標案中不另計價；
+(三)專家座談1場次；
+七、完成複合式模板支撐之設施需求評估與規劃：
+(一) 複合式模板支撐之設施需求現場訪視10場次以上；
+(二)至少包含上下設備、安全設施及作業平臺；
+(三)專家座談1場次；
+八、編撰複合式模板支撐系統設計指引；
+(一)至少應包含職災要因分析、複合式模板支撐之強度測試結果、上下方不同固定方式之可調鋼管試驗結果及複合式模板支撐之設施需求評估與規劃；
+(二)專家座談1場次；
+九、編製模板支撐技術職能課程；
+(一)包含職災要因分析、複合式模板支撐之性能之判定、上下方不同固定方式之可調鋼管強度性能及複合式模板支撐之設施需求評估與規劃，總計6小時以上；
+(二)辦理6小時技術職能課程2場次以上；累計40人以上；
+(三)專家座談1場次；
+十、辦理研討會與示範觀摩
+(一)三場次以上；累計150人以上，優先邀請曾發生職業災害之營造業者；
+(二)至少應包含職災要因分析、複合式模板支撐之強度測試結果、上下方不同固定方式之可調鋼管試驗結果及複合式模板支撐之設施需求評估與規劃</textarea>
+                                                            <label>採購規格</label>
+                                                        </div>
+                                                        <div class="help">7150 / 8000</div>
                                                     </div>
                                                     <div class="form_grp">
+                                                        <div class="form_content">
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="7" class="dynamicCol used"> 人
+                                                                <label>本案評審委員共：</label>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <textarea class="used">本中心提供每間會議室桌椅數量以價目表所列標準容量為限，額外需求或現場追加桌椅費用另計。
-免費提供標準配備：有線麥克風及無線麥克風各 1 支、主講桌 1 個、司儀台 1 個、三人報到桌 2 張、海報架 3 個，其它設備依價目表收費。</textarea>
-                                                            <label>採購規格</label>
+                                                            <input name="" type="text" value="3" class="dynamicCol used"> 人
+                                                            <label>專家學者委員共</label>
+                                                        </div>
+                                                        <div class="labelEffect">
+                                                            <input name="" type="text" value="何委員崇銘、林委員茂村、許委員文貴" class="dynamicCol used">
+                                                            <label>專家學者委員姓名</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form_grp form_inline">
+                                                        <div class="labelEffect">
+                                                            <input name="" type="text" value="3" class="dynamicCol used"> 人
+                                                            <label>專家學者以外委員共</label>
+                                                        </div>
+                                                        <div class="labelEffect">
+                                                            <input name="" type="text" value="何委員崇銘、林委員茂村、許委員文貴、周委員頌安" class="dynamicCol used">
+                                                            <label>專家學者以外委員姓名</label>
                                                         </div>
                                                     </div>
     
