--- a/index_list.html
+++ b/index_list.html
@@ -338,11 +338,13 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：採購網 - 4.標案管理(編輯案件、附件變更歷程紀錄)</td>
+                        <td><font style="color:red;">(10/10新增)</font> 
+                            AP功能：採購網 - 4.標案管理(編輯案件、變更歷程紀錄)</td>
                         <td>
                             <ul>
                                 <li>4-1.標案清單 <a href="ilosh_projectList.htm" target="_blank"></a></li>
-                                <li>4-2.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a></li>
+                                <li>4-2.標案新增 <a href="ilosh_projectNew.htm" target="_blank"></a></li>
+                                <li>4-3.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a></li>
                                 <li>彈出視窗(Lightbox)：歷程欄位記錄 <a href="fancybox_projecthistory.htm" target="_blank"></a></li>
                             </ul>
                         </td>
