--- a/index_list.html
+++ b/index_list.html
@@ -351,10 +351,10 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：採購網 - 報表模組</td>
+                        <td><font style="color:red;">(10/11新增)</font>AP功能：採購網 - 5.報表模組</td>
                         <td>
                             <ul>
-                                <li></li>
+                                <li>5-1.標案統計 <a href="ilosh_projectStat.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
