--- a/index_list.html
+++ b/index_list.html
@@ -360,19 +360,22 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：研究網 - 成果批次上稿(附件批次上傳)</td>
+                        <td>AP功能：研究網 - 6.成果批次上稿(匯入/附件批次上傳)</td>
                         <td>
                             <ul>
-                                <li></li>
+                                <li>6-1.成果清單 <a href="#" target="_blank"></a></li>
+                                <li>6-2.匯入紀錄 <a href="ilosh_researchImportrecord.htm" target="_blank"></a></li>
+                                <li>6-3.匯入 <a href="ilosh_researchImport.htm" target="_blank"></a></li>
+                                <li>6-4.匯入上傳中(鎖定) <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：研究網 - 報表模組</td>
+                        <td>AP功能：研究網 - 7.報表模組</td>
                         <td>
                             <ul>
-                                <li></li>
+                                <li>7-1.標案統計 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
