--- a/ilosh_projectStat.htm
+++ b/ilosh_projectStat.htm
@@ -177,11 +177,21 @@
                                             </div>
                                             <div class="form_grp form_inline">
                                                     <div class="labelEffect">
-                                                        <input name="" type="text" value="">
+                                                        <select id="" name="">
+                                                            <option value="" selected="" disabled="disabled"></option>
+                                                            <option value="1">選項</option>
+                                                            <option value="2">選項</option>
+                                                            <option value="3">選項</option>
+                                                        </select>
                                                         <label>招標狀態</label>
                                                     </div>
                                                     <div class="labelEffect">
-                                                        <input name="" type="text" value="">
+                                                        <select id="" name="">
+                                                            <option value="" selected="" disabled="disabled"></option>
+                                                            <option value="1">選項</option>
+                                                            <option value="2">選項</option>
+                                                            <option value="3">選項</option>
+                                                        </select>
                                                         <label>決標狀態</label>
                                                     </div>
                                             </div>
@@ -195,6 +205,10 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="flex-12">
+                        <div class="col"><p class="notice">目前條件 - 招標日期：2022/8/13~2022/10/13</p></div>
+                        
                     </div>
                     <div class="flex-3-3-3-3">
                         <div class="col">
