--- a/ilosh_researchList_temp.htm
+++ b/ilosh_researchList_temp.htm
@@ -32,16 +32,35 @@
                 <ul>
                     <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">客製化管理</a></li>
-                    <li>標案管理</li>
+                    <li>研究成果批次管理</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>標案管理</h2>
+                        <h2>研究成果批次管理</h2>
                         <button class="btn btn-primary btn-adv">
                             <i class="i_search"></i></button>
+                    </div>
+                    <div class="flex-12">
+                        <div class="col ">
+                            <div class="content_block">
+                                <div class="_head">
+                                    <h3>請先選擇單元</h3>
+                                    <select id="" name="">
+                                        <option value="" selected="" disabled="disabled"></option>
+                                            <option value="1" selected>各年度研究報告</option>
+                                            <option value="2">簡訊</option>
+                                            <option value="3">研究季刊</option>
+                                            <option value="4">技術叢書</option>
+                                            <option value="5">重要績效輯(其他出版品)</option>
+                                            <option value="6">專利技術</option>
+                                        </optgroup>                                                        
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- flex-12 搜尋 -->
                     <div class="flex-12">
@@ -56,22 +75,22 @@
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <input name="search_userid" id="search_userid" type="text" value="">
-                                                    <label>採購案案號</label>
+                                                    <label>計畫編號</label>
                                                 </div>
                                             </div>
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <input name="search_name" id="search_name" type="text" value="">
-                                                    <label>案名</label>
+                                                    <label>研究報告名稱</label>
                                                 </div>
                                             </div>
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <select id="" name="">
                                                         <option value="" selected="" disabled="disabled"></option>
-                                                        <optgroup label="資料夾">
-                                                            <option value="1">節點</option>
-                                                            <option value="2">節點</option>
+                                                        <optgroup label="第一層單位群組">
+                                                            <option value="1">單位名稱1</option>
+                                                            <option value="2">單位名稱2</option>
                                                           </optgroup>
                                                           <optgroup label="資料夾2">
                                                             <option value="3">節點</option>
@@ -79,16 +98,16 @@
                                                             <option value="4">節點</option>
                                                           </optgroup>                                                        
                                                     </select>
-                                                    <label>承辦單位</label>
+                                                    <label>研究單位</label>
                                                 </div>
                                             </div>
-                                            <div class="form_grp">
+                                            <!--div class="form_grp">
                                                 <div class="labelEffect">
                                                     <select id="" name="">
                                                         <option value="" selected="" disabled="disabled"></option>
-                                                        <optgroup label="資料夾">
-                                                            <option value="1">節點</option>
-                                                            <option value="2">節點</option>
+                                                        <optgroup label="第一層單位群組">
+                                                            <option value="1">單位名稱1</option>
+                                                            <option value="2">單位名稱2</option>
                                                           </optgroup>
                                                           <optgroup label="資料夾2">
                                                             <option value="3">節點</option>
@@ -96,9 +115,9 @@
                                                             <option value="4">節點</option>
                                                           </optgroup>                                                        
                                                     </select>
-                                                    <label>採購單位</label>
+                                                    <label>出版單位</label>
                                                 </div>
-                                            </div>
+                                            </div-->
                                             <div class="form_grp datepick">
                                                 <div class="startDate">
                                                     <div class="labelEffect">
@@ -106,7 +125,7 @@
                                                         <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
                                                         <!--input name="" type="calendar" value="" class="calendar">
                                                         <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>公告日期(起)</label>
+                                                        <label>發布日期(起)</label>
                                                     </div>
                                                     <!-- <div class="help">說明文字</div> -->
                                                 </div>
@@ -115,30 +134,34 @@
                                                         <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
                                                         <!--input name="" type="calendar" value="" class="calendar">
                                                         <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>公告日期(迄)</label>
+                                                        <label>發布日期(迄)</label>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="form_grp datepick">
-                                                <div class="startDate">
-                                                    <div class="labelEffect">
-                                                        <!--處理 Animated Labels for date/datetime-local 會卡在一起的效果-->
-                                                        <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
-                                                        <!--input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>截止日期(起)</label>
-                                                    </div>
-                                                    <!-- <div class="help">說明文字</div> -->
+                                            <!--div class="form_grp">
+                                                <div class="labelEffect">
+                                                    <select id="" name="">
+                                                        <option value="" selected="" disabled="disabled"></option>
+                                                            <option value="1">111年</option>
+                                                            <option value="2">112年</option>
+                                                            <option value="3">節點</option>
+                                                            <option value="4">節點</option>
+                                                            <option value="4">節點</option>
+                                                    </select>
+                                                    <label>出版年度</label>
                                                 </div>
-                                                <div class="endDate">
-                                                    <div class="labelEffect">
-                                                        <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
-                                                        <!--input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>截止日期(迄)</label>
-                                                    </div>
+                                                <div class="labelEffect">
+                                                    <select id="" name="">
+                                                        <option value="" selected="" disabled="disabled"></option>
+                                                            <option value="1">第N卷</option>
+                                                            <option value="2">2月</option>
+                                                            <option value="3">節點</option>
+                                                            <option value="4">節點</option>
+                                                            <option value="4">節點</option>
+                                                    </select>
+                                                    <label>卷別/期別</label>
                                                 </div>
-                                            </div>
+                                            </div-->
                                         </div>
                                         
                                         <div class="btn_grp">
@@ -157,31 +180,19 @@
                             <!-- 中央區塊 -->
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>標案資訊條列</h3>
+                                    <h3>成果報告條列</h3>
                                 </div>
                                 <div class="_head">
-                                    <div class="tag">
-                                        公告狀態： 
+                                    <!--div class="tag">
+                                        狀態： 
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">第一次公告</a></li>
-                                            <li><a href="#">第二次公告</a></li>
+                                            <li><a href="#">公開(上架)</a></li>
+                                            <li><a href="#">關閉(下架)</a></li>
                                             <li><a href="#">第三次公告及以後</a></li>
                                         </ul>
-                                        ｜收件狀態：
-                                        <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">公告中</a></li>
-                                            <li><a href="#">已截止</a></li>
-                                        </ul>
-                                        ｜決標狀態：
-                                        <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">已決標</a></li>
-                                            <li><a href="#">流標</a></li>
-                                            <li><a href="#">廢標</a></li>
-                                        </ul>
-                                    </div>
+                                    
+                                    </div-->
                                     <!-- 批次資料處理 --><!-- 預設隱藏，有勾選check再顯示 -->
                                     <!--div class="control_panel">
                                         <div class="dropdown">
@@ -205,7 +216,8 @@
                                     <!-- 頁碼 -->
                                     <div class="pagination">
                                         <form action="" class="form_inline">
-                                            <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
+                                            <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 
+                                                <select name="" id="">
                                                     <option value="">10</option>
                                                     <option value="">30</option>
                                                     <option value="">50</option>
@@ -214,7 +226,8 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='ilosh_projectNew.htm';"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='ilosh_researchNew.htm';"><i class="i_add"></i>單筆新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='#';"><i class="i_add"></i>批次新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
@@ -229,16 +242,13 @@
                                                         <a href="#">系統編號 <i class="i_sort"></i></a>
                                                     </th>
                                                     <th class="text-left">
-                                                        <a href="#">採購案案號 <i class="i_sort"></i></a>
+                                                        <a href="#">計畫編號 <i class="i_sort"></i></a>
                                                     </th>
-                                                    <th>案名</th>
-                                                    <th>請購單位</th>
-                                                    <th>請購人</th>
-                                                    <th class="text-left">公告狀態</th>
-                                                    <th class="text-left">收件狀態</th>
-                                                    <th class="text-left">決標狀態</th>
+                                                    <th>名稱</th>
+                                                    <th>單位</th>
+                                                    <th class="text-left">狀態</th>
                                                     <th>
-                                                        <a href="#">公告日期 <i class="i_sort"></i></a>
+                                                        <a href="#">建立日期 <i class="i_sort"></i></a>
                                                     </th>
                                                     <th>編輯</th>
                                                 </tr>
