--- a/index_list.html
+++ b/index_list.html
@@ -366,7 +366,7 @@
                                 <li>6-1.成果清單 <a href="#" target="_blank"></a></li>
                                 <li>6-2.匯入紀錄 <a href="ilosh_researchImportrecord.htm" target="_blank"></a></li>
                                 <li>6-3.匯入 <a href="ilosh_researchImport.htm" target="_blank"></a></li>
-                                <li>6-4.匯入上傳中(鎖定) <a href="#" target="_blank"></a></li>
+                                <li>6-4.匯入上傳中(鎖定) <a href="ilosh_researchImport-uploading.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
